# client

./: Makefile  Pipfile  setup.cfg  setup.py
src/pupiilclient/: __init__.py  client.py
